[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A simple, non-persistent, disk-based key-value store."
documentation = "http://maidsafe.net/chunk_store/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "chunk_store"
readme = "README.md"
repository = "https://github.com/maidsafe/chunk_store"
version = "0.1.0"

[dependencies]
clippy = {version = "~0.0.37", optional = true}
log = "~0.3.5"
rustc-serialize = "~0.3.16"
tempdir = "~0.3.4"
xor_name = "~0.0.3"

[dev-dependencies]
maidsafe_utilities = "~0.1.5"
rand = "~0.3.13"
